--- a/0-Lecture/hello.html
+++ b/0-Lecture/hello.html
@@ -5,6 +5,6 @@
     <title>My Webpage</title>
   </head>
   <body>
-    Hello World! Hello again! Helo! Hello! Hello!
+    Hello World! Hello again!
   </body>
 </html>
