--- a/0-Lecture/hello.html
+++ b/0-Lecture/hello.html
@@ -5,6 +5,6 @@
     <title>My Webpage</title>
   </head>
   <body>
-    Hello World! Hello again! Hello for third time!
+    Hello World!
   </body>
 </html>
