Project0 was modified as per the submission requirements.

--- a/project0/hello.html
+++ b/project0/hello.html
@@ -19,6 +19,8 @@
 		<li><a href="index.html">Home Page</a></li>
 		<li><a href="image.html">Go to Image</a></li>
 		<li><a href="articles.html">Go to Articles</a></li>
+		<li><a href="inheritance.html">Go to messages page!</a></li>
+
 	</ul>
 
 	<div class="grid">
