--- a/project0/image.html
+++ b/project0/image.html
@@ -9,8 +9,10 @@
 		<li><a href="index.html">Back to Home Page</a></li>
 		<li><a href="hello.html">Go to Hello World page</a></li>
 		<li><a href="articles.html">Go to article page</a></li>
+		<li><a href="inheritance.html">Go to messages page!</a></li>
+
 	</ul>
 
-	<img src="coffee.jpg">
+	<img src="images/coffee.jpg">
 </body>
 </html>
