--- a/project0/index.html
+++ b/project0/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="scss/styles2.css">
+	<link rel="stylesheet" type="text/css" href="nesting/nesting.css">
 	<title>My Webpage</title>
 </head>
 <body>
@@ -19,7 +21,7 @@
 			<button>Submit</button>
 		</div>
 
-		<div>
+		<div id="sports">
 			<h4>Your Favorite Sport:</h4>
 			<input type="radio" name="sport">Football
 			<input type="radio" name="sport">Baseball
@@ -33,6 +35,8 @@
 		<li>To visit Hello World page, <a href="hello.html">click here!</a></li>
 		<li>To visit images page, <a href="image.html">click here!</a></li>
 		<li>To visit articles page, <a href="articles.html">click here!</a></li>
+		<li>To messages page, <a href="inheritance.html">click here!</a></li>
+
 	</ul>
 
 	<table>
@@ -53,7 +57,25 @@
 			<td>Willie</td>
 			<td>6</td>
 		</tr>
-	</table>	
+	</table>
+
+	<div>
+		<br>
+		Bellow is an ordered list inside a div element.
+		<ol>
+			<li>First List Item</li>
+			<li>Second List Item</li>
+			<li>Third List Item</li>
+		</ol>
+
+		Bellow is an unordered list inside a dive element.
+
+		<ul>
+			<li>List item one</li>
+			<li>List item two</li>
+			<li>List item three</li>
+		</ul>
+	</div>	
 	
 </body>
 </html>
