--- a/project0/articles.html
+++ b/project0/articles.html
@@ -12,6 +12,8 @@
 		<li><a href="index.html">Home Page</a></li>
 		<li><a href="hello.html">Hello World</a></li>
 		<li><a href="image.html">Go to Image</a></li>
+    <li><a href="inheritance.html">Go to messages page!</a></li>
+
 	</ul>
 	<header><h1>My Articles</h1></header>
 
