--- a/project0/index.html
+++ b/project0/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html style="width: 100%">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="scss/styles2.css">
 	<link rel="stylesheet" type="text/css" href="nesting/nesting.css">
+	
 	<title>My Webpage</title>
 </head>
-<body>
+<body style="height:100%">
 	<header><h1 id="main-heading"></h1></header>
+	<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="image.html">Image</a></li>
+		<li><a href="articles.html">Articles</a></li>
+		<li><a href="Messages.html">Messages</a></li>
+
+	</ul>
 	
 	<h4>Please Enter Your Info!</h4>
 
@@ -20,6 +30,7 @@
 			<input type="tex" placeholder="Email" name="email">
 			<button>Submit</button>
 		</div>
+		<br>
 
 		<div id="sports">
 			<h4>Your Favorite Sport:</h4>
@@ -29,16 +40,10 @@
 			<input type="radio" name="sport">Badminton
 		</div>
 
+	<br>
+	<h4>Animal World!</h4>
 	</form>
-	<h2>List of My Webpages:</h2>
-	<ul>
-		<li>To visit Hello World page, <a href="hello.html">click here!</a></li>
-		<li>To visit images page, <a href="image.html">click here!</a></li>
-		<li>To visit articles page, <a href="articles.html">click here!</a></li>
-		<li>To messages page, <a href="inheritance.html">click here!</a></li>
-
-	</ul>
-
+	
 	<table>
 		<tr>
 			<th>Animal Type</th>
@@ -58,6 +63,23 @@
 			<td>6</td>
 		</tr>
 	</table>
+	<br>
+
+	<h4>Boxed Text</h4>
+	<div class="grid">
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="grid-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+    </div>
 
 	<div>
 		<br>
