--- a/project0/messages.html
+++ b/project0/messages.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html style="width: 100%">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Coffee</title>
+	<title>Messages</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-  	<link rel="stylesheet" href="css/bootstrap-grid.min">
+	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="inheritance/inheritance.css">
 </head>
 <body style="height:100%">
 
@@ -17,9 +16,12 @@
 		<li><a href="image.html">Image</a></li>
 		<li><a href="articles.html">Articles</a></li>
 		<li><a href="Messages.html">Messages</a></li>
-
 	</ul>
+	
+	<div class="success">This is a success message.</div>
 
-	<img src="images/coffee.jpg">
+    <div class="warning">This is a warning message.</div>
+
+    <div class="error">This is an error message.</div>
 </body>
 </html>
