--- a/project0/articles.html
+++ b/project0/articles.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html style="width: 100%">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<title>Articles</title>
 </head>
-<body>
-	<ul>
-		<li><a href="index.html">Home Page</a></li>
-		<li><a href="hello.html">Hello World</a></li>
-		<li><a href="image.html">Go to Image</a></li>
-    <li><a href="inheritance.html">Go to messages page!</a></li>
+<body style="height:100%">
 
-	</ul>
-	<header><h1>My Articles</h1></header>
+  <header><h1 id="main-heading"></h1></header>
+  
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="image.html">Image</a></li>
+    <li><a href="articles.html">Articles</a></li>
+    <li><a href="Messages.html">Messages</a></li>
 
-	<div class="container">
+  </ul>
+  
+	<div class="container-fluid">
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6">
             	<p id="p1">Article One</p>
