broken link corrected

--- a/project0/articles.html
+++ b/project0/articles.html
@@ -16,7 +16,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="image.html">Image</a></li>
     <li><a href="articles.html">Articles</a></li>
-    <li><a href="Messages.html">Messages</a></li>
+    <li><a href="messages.html">Messages</a></li>
 
   </ul>
   
