--- a/project0/messages.html
+++ b/project0/messages.html
@@ -15,7 +15,7 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="image.html">Image</a></li>
 		<li><a href="articles.html">Articles</a></li>
-		<li><a href="Messages.html">Messages</a></li>
+		<li><a href="messages.html">Messages</a></li>
 	</ul>
 	
 	<div class="success">This is a success message.</div>
